--- a/css/task4.css
+++ b/css/task4.css
@@ -13,42 +13,25 @@ a {
 }
 
 header {
-    max-width: 1500px;
+    max-width: 2400px;
     margin: 0 auto;
-    padding: 60px 100px 40px;
+    padding: 60px 100px 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.logo {
-    font-size: 32px;
-    text-transform: uppercase;
-    font-weight: 900;
-    color: #076BB2;
-}
-
 nav {
     display: flex;
-    align-items: center;
-    gap: 35px;
+    gap: 150px;
 }
 
 nav a {
     color: black;
-    font-size: 20px;
-
+    font-size: 30px;
+    font-weight: 600;
 }
 
-button {
-    background: #076BB2;
-    color: white;
-    border: none;
-    text-transform: uppercase;
-    padding: 10px 80px;
-    font-size: 20px;
-    cursor: pointer;
-}
 
 .lang {
     display: flex;
@@ -63,57 +46,18 @@ button {
 }
 
 .hero {
-    height: 981px;
+    height: 750px;
     background: url(../images/hero.png);
     background-size: cover;
     display: flex;
     align-items: end;
     justify-content: center;
-    padding-bottom: 140px;
-}
-
-.hero-choose {
-    padding: 24px 20px;
-    width: 235px;
-    height: 100px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.hero-choose:nth-child(1) {
-    background: #7b7b7b;
-}
-
-.hero-choose:nth-child(2) {
-    background: #504F4F;
-}
-
-.hero-choose:nth-child(3) {
-    background: #303030;
-}
-
-.hero-choose H4 {
-    line-height: 160%;
-}
-
-.hero-choose select {
-    background: transparent;
-    border: none;
-    color: wheat;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.hero button {
-    height: 100px;
-    padding: 20px;
+    padding-bottom: 100px;
 }
 
 .about-us {
     margin: 100px auto;
-    max-width: 1080px;
+    max-width: 1100px;
     padding: 0px 30px;
     line-height: 150%;
     text-align: center;
@@ -136,14 +80,12 @@ h2 {
 .our-events {
     text-align: center;
     padding: 30px;
-
 }
 
 .cards {
-
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    max-width: 1300px;
+    max-width: 1100px;
     margin: 25px auto;
     gap: 20px;
 }
@@ -189,11 +131,10 @@ h2 {
     font-size: 20px;
     font-weight: 500;
     text-transform: none;
-
 }
 
 .contact-us {
-    max-width: 940px;
+    max-width: 900px;
     margin: 100px auto;
     padding: 30px;
 }
@@ -202,13 +143,12 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 60px;
-
 }
 
 .contact-form-fields {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 60px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 120px;
     margin-top: 100px;
 }
 
@@ -224,13 +164,7 @@ h2 {
     height: 100px;
     border: 1px solid black;
     outline: none;
-
-}
-
-.contact-form button {
-    width: 235px;
-    display: block;
-    margin: 0 auto;
+    font-size: 20px;
 }
 
 footer {
@@ -239,7 +173,7 @@ footer {
 }
 
 .footer-body {
-    max-width: 1160px;
+    max-width: 1100px;
     margin: 0 auto;
     color: white;
 }
@@ -265,46 +199,46 @@ footer {
     gap: 15px;
 }
 
-.footer-body-links a{
-font-weight: 100;
-color: white;
+.footer-body-links a {
+    font-weight: 100;
+    color: white;
 }
 
-.footer-body-links h4{
-margin-bottom: 15px;
-font-family: "Lora", serif;
-font-weight: 700;
-font-size: 24px;
+.footer-body-links h4 {
+    margin-bottom: 15px;
+    font-family: "Lora", serif;
+    font-weight: 700;
+    font-size: 24px;
 
 }
 
-.footer-social-media{
+.footer-social-media {
     display: flex;
     align-items: center;
     gap: 15px;
     margin: 20px 0px;
 }
 
-.footer-policy{
-  display: flex;  
-  align-items: center;
-  gap: 15px;
-  border-top: 2px solid white;
-  padding: 15px 0px 32px;
+.footer-policy {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    border-top: 1px solid white;
+    padding: 15px 0px 15px;
 }
 
-.footer-policy a{
+.footer-policy a {
     color: white;
     font-weight: 100;
 }
 
-.rights{
+.rights {
     font-weight: 100;
     opacity: 0.5;
 }
 
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1100px) {
     .burger-btn {
         display: block;
     }
@@ -322,39 +256,18 @@ font-size: 24px;
     }
 }
 
-@media screen and (max-width: 768px) {
-    .hero {
-        flex-direction: column;
-        align-items: center;
-        justify-content: end;
-    }
-
-    .hero button,
-    .hero-choose {
-        width: max(70%, 300px);
-    }
-
-    .contact-form-fields {
-        grid-template-columns: repeat(1, 1fr);
-        gap: 30px;
-        margin-top: 40px;
-    }
-
-    .contact-form {
-        gap: 30px;
-    }
-
-    header {
-        padding: 30px 10px;
-    }
-
-}
 
 @media screen and (max-width: 550px) {
-  .footer-body-links, .footer-policy, .footer-social-media, .rights{
-    display: none;
-  }
-}.footer-body h3{
+
+    .footer-body-links,
+    .footer-policy,
+    .footer-social-media,
+    .rights {
+        display: none;
+    }
+}
+
+.footer-body h3 {
     font-size: 32px;
 }
 
@@ -378,12 +291,3 @@ font-size: 24px;
     color: #303030;
 }
 
-.card-date {
-    width: 70px;
-    height: 70px;
-    font-size: 16px;
-}
-
-.card-date-day {
-    font-size: 20px;
-}
